# Reversi

./: Board.java  BoardController.java  BoardXML.fxml  CMakeLists.txt  Cell.java  Counter.java  Disk.java  Display.java  GameController.java  GameFXML.fxml  Gameflow.java  Logic.java  Main.java  Player.java  Point.java  README.md  Reversi.java  Score.java  SettingsController.java  SettingsInfo.java  StartScreen.fxml  StartScreenController.java  a.out  application.css  board.cpp  board.h  cell.h  choose from ex2.txt  computer.cpp  computer.h  config  consoleDisplay.cpp  consoleDisplay.h  display.h  game.cpp  human.cpp  human.h  log  logic.cpp  logic.h  (+11 more)
Console/: Board.java  Cell.java  ConsoleGameInfo.java  ConsoleUI.java  Counter.java  Disk.java  Gameflow.java  Logic.java  Player.java  Point.java  Reversi.java  Symbol.java  regLogic.java
FXMLs/: Board.fxml  Reversi.fxml  Settings.fxml
GUI/: CellListener.java  GUIBoard.java  GUICell.java  GUIDisk.java  GUIGameInfo.java  GUIGameflow.java  GUIPlayer.java  Reversi.java  ReversiController.java  StyleSheet.css
GUI/Controllers/: GUIBoard.java  ReversiController.java  Settings.java
GUI/FXMLs/: Reversi.fxml
GUI/Listeners/: CellListener.java  ScoreListener.java  UIListener.java
GUI/Utilities/: Listener.java  Notifier.java  SettingsInfo.java
Resources/: StyleSheet.css  config
etc/: info.txt  log.txt
exe/: client  client_exe  server
lib/googletest-master/googlemock/: README.md
lib/googletest-master/googlemock/docs/: CookBook.md
lib/googletest-master/googlemock/include/gmock/: gmock-actions.h  gmock-generated-actions.h  gmock-generated-function-mockers.h.pump  gmock-generated-matchers.h  gmock-more-actions.h  gmock-spec-builders.h
lib/googletest-master/googlemock/include/gmock/internal/: gmock-generated-internal-utils.h
lib/googletest-master/googlemock/include/gmock/internal/custom/: gmock-generated-actions.h  gmock-matchers.h  gmock-port.h
lib/googletest-master/googletest/: README.md
lib/googletest-master/googletest/include/gtest/: gtest-param-test.h.pump  gtest-spi.h  gtest-test-part.h  gtest_pred_impl.h
lib/googletest-master/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util-generated.h.pump  gtest-port.h  gtest-string.h
lib/googletest-master/googletest/include/gtest/internal/custom/: gtest.h
lib/googletest-master/googletest/samples/: prime_tables.h  sample1.h  sample2.h  sample3-inl.h  sample4.h
lib/googletest-master/googletest/src/: gtest-internal-inl.h
lib/googletest-master/googletest/test/: gtest-param-test_test.h  gtest-typed-test_test.h  gtest_output_test_golden_lin.txt  production.h
lib/googletest-master/googletest/xcode/Samples/FrameworkSample/: widget.h
server/: server.cpp  server.h
src/: tools.h
src/client/: cell.cpp  client.cpp  client.h  clientCommand.cpp  clientCommand.h  client_config  computer.cpp  computer.h  consoleDisplay.cpp  display.h  dummy.cpp  dummy.h  game.cpp  gameFlow.cpp  gameFlow.h  gameManager.cpp  gameManager.h  human.cpp  human.h  logic.cpp  logic.h  main.cpp  makefile  player.cpp  player.h  point.cpp  point.h  regLogic.h
src/server/: HandleGame.cpp  HandleGame.h  Lobby.cpp  Lobby.h  Room.cpp  Room.h  Task.cpp  Task.h  ThreadPool.cpp  ThreadPool.h  command.h  commandClose.cpp  commandClose.h  commandJoin.cpp  commandJoin.h  commandPlay.cpp  commandPlay.h  commandPrint.cpp  commandPrint.h  commandStart.cpp  commandStart.h  commandsManager.cpp  commandsManager.h  main.cpp  makefile  server.cpp  server.h
src/server/commands/: command.h  commandClose.cpp  commandClose.h  commandJoin.cpp  commandJoin.h  commandPlay.cpp  commandPlay.h  commandPrint.cpp  commandPrint.h  commandStart.cpp  commandStart.h  commandsManager.cpp  commandsManager.h
src/tests/: boardTest.cpp  cellTest.cpp  lobbyTest.cpp  logicTest.cpp  playerTest.cpp  pointTest.cpp  remoteTest.cpp.cpp  serverTest.cpp
src/tests/lib/: lobbyTest.cpp
src/tests/lib/googletest-master/googlemock/docs/: DevGuide.md  FrequentlyAskedQuestions.md
src/tests/lib/googletest-master/googlemock/include/gmock/: gmock-cardinalities.h  gmock-generated-function-mockers.h  gmock-generated-nice-strict.h  gmock-matchers.h  gmock-more-matchers.h  gmock.h
src/tests/lib/googletest-master/googlemock/include/gmock/internal/: gmock-internal-utils.h  gmock-port.h
src/tests/lib/googletest-master/googlemock/make/: Makefile
src/tests/lib/googletest-master/googlemock/test/: gmock_link_test.h
src/tests/lib/googletest-master/googletest/: configure.ac
src/tests/lib/googletest-master/googletest/docs/: AdvancedGuide.md  DevGuide.md  Primer.md
src/tests/lib/googletest-master/googletest/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-param-test.h  gtest-printers.h  gtest-typed-test.h  gtest.h  gtest_prod.h
src/tests/lib/googletest-master/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-linked_ptr.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port-arch.h  gtest-tuple.h  gtest-type-util.h
src/tests/lib/googletest-master/googletest/include/gtest/internal/custom/: gtest-port.h  gtest-printers.h
tests/: boardTest.cpp  cellTest.cpp  logicTest.cpp  playerTest.cpp  pointTest.cpp
